--- a/package.json
+++ b/package.json
@@ -36,10 +36,13 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fortawesome/free-brands-svg-icons": "^6.6.0",
+		"@fortawesome/free-solid-svg-icons": "^6.6.0",
 		"@sveltejs/adapter-static": "^3.0.1",
 		"@types/d3": "^7.4.3",
 		"d3": "^7.9.0",
 		"d3-hsv": "^0.1.0",
+		"svelte-fa": "^4.0.3",
 		"svelte-headlessui": "^0.0.32",
 		"three": "^0.169.0"
 	}
